--- a/apps/ui/Dockerfile
+++ b/apps/ui/Dockerfile
@@ -1,27 +1,31 @@
 # Development stage
-FROM node:18-alpine
+FROM node:23-alpine
 
 WORKDIR /app
 
-# Install dependencies
-COPY package*.json ./
-COPY apps/ui/package.json ./apps/ui/
-COPY packages/protocol/package.json ./packages/protocol/
+# Install pnpm
+RUN corepack enable && corepack prepare pnpm@8.15.4 --activate
 
-RUN npm install
+# Copy workspace files
+COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml ./
+COPY apps/ui/package.json ./apps/ui/
+
+# Install dependencies
+RUN pnpm install --frozen-lockfile
 
 # Copy source code
 COPY . .
 
 # Start development server
-CMD ["npm", "run", "dev", "--workspace=@inrush/ui"]
+CMD ["pnpm", "run", "dev", "--filter", "@inrush/ui"]
 
 # Production build would be:
 # FROM node:18-alpine AS builder
 # WORKDIR /app
+# RUN corepack enable && corepack prepare pnpm@8.15.4 --activate
 # COPY . .
-# RUN npm ci
-# RUN npm run build --workspace=@inrush/ui
+# RUN pnpm install --frozen-lockfile
+# RUN pnpm run build --filter=@inrush/ui
 #
 # FROM nginx:alpine
 # COPY --from=builder /app/apps/ui/dist /usr/share/nginx/html
