--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "go:tidy": "find . -name 'go.mod' -execdir go mod tidy \\;"
   },
   "devDependencies": {
     "turbo": "^1.12.4",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3"
   },
-  "packageManager": "npm@10.2.4",
+  "packageManager": "pnpm@8.15.4",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=23.6.0",
+    "pnpm": ">=8.0.0"
   }
 }
