--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build:types": "pnpm exec tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-query": "^4.36.1",
     "@theia/core": "1.58.0",
     "@theia/editor": "1.58.0",
     "@theia/filesystem": "1.58.0",
@@ -29,8 +29,8 @@
     "@trpc/server": "^10.45.1",
     "@types/ws": "^8.5.10",
     "next": "14.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "superjson": "^2.2.1",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
@@ -38,13 +38,13 @@
   "devDependencies": {
     "@theia/cli": "1.58.0",
     "@types/node": "^20.11.24",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "eslint-config-next": "^14.2.24",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
