--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -1,54 +1,72 @@
 {
   "name": "@inrush/ui",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "next start",
+    "check": "next lint && tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "dev": "next dev",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
+    "start": "next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^4.36.1",
-    "@theia/core": "1.58.0",
-    "@theia/editor": "1.58.0",
-    "@theia/filesystem": "1.58.0",
-    "@theia/markers": "1.58.0",
-    "@theia/messages": "1.58.0",
-    "@theia/monaco": "1.58.0",
-    "@theia/navigator": "1.58.0",
-    "@theia/preferences": "1.58.0",
-    "@theia/process": "1.58.0",
-    "@theia/terminal": "1.58.0",
-    "@theia/workspace": "1.58.0",
-    "@trpc/client": "^10.45.1",
-    "@trpc/next": "^10.45.1",
-    "@trpc/react-query": "^10.45.1",
-    "@trpc/server": "^10.45.1",
+    "@tailwindcss/oxide-linux-arm64-musl": "^4.0.7",
+    "@tanstack/react-query": "^5.0.0",
+    "@trpc/client": "^11.0.0-next-beta.264",
+    "@trpc/next": "^11.0.0-next-beta.264",
+    "@trpc/react-query": "^11.0.0-next-beta.264",
+    "@trpc/server": "^11.0.0-next-beta.264",
     "@types/ws": "^8.5.10",
-    "next": "14.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "drizzle-orm": "^0.33.0",
+    "lightningcss-linux-arm64-musl": "^1.29.1",
+    "next": "15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "superjson": "^2.2.1",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@theia/cli": "1.58.0",
-    "@types/node": "^20.11.24",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.24",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
+    "autoprefixer": "^10.4.17",
+    "drizzle-kit": "^0.24.0",
+    "eslint": "^9.20.1",
+    "eslint-config-next": "15.1.7",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.38.1"
+  },
+  "packageManager": "pnpm@10.4.1",
+  "engines": {
+    "node": ">=23.6.0",
+    "pnpm": ">=10.4.1"
   }
 }
