--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,4 @@
-version: '3.8'
-
 services:
-  timescaledb:
-    image: timescale/timescaledb:latest-pg15
-    environment:
-      - POSTGRES_DB=inrush
-      - POSTGRES_USER=inrush
-      - POSTGRES_PASSWORD=inrush
-    volumes:
-      - timescaledb-data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U inrush"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
 
   runtime:
     build:
@@ -38,52 +21,35 @@ services:
       - DB_USER=inrush
       - DB_PASSWORD=inrush
     command: go run ./cmd/inrush/main.go
-    depends_on:
-      timescaledb:
-        condition: service_healthy
 
   ui:
     build:
       context: .
       dockerfile: apps/ui/Dockerfile
     volumes:
-      - ./apps/ui:/app
-      - /app/node_modules
+      - ./apps/ui:/apps/ui
       - pnpm-store:/root/.local/share/pnpm/store
     ports:
-      - "8080:8080"
+      - "8080:3000"
     environment:
       - NODE_ENV=development
       - NEXT_PUBLIC_WS_URL=ws://localhost:3000/ws
     depends_on:
       - runtime
+      - caddy
 
-  website:
-    build:
-      context: .
-      dockerfile: apps/website/Dockerfile
-    volumes:
-      - ./apps/website:/app
-      - /app/node_modules
+  caddy:
+    image: caddy:2-alpine
     ports:
       - "3001:3001"
-    environment:
-      - NODE_ENV=development
-
-  docs:
-    build:
-      context: .
-      dockerfile: docs/Dockerfile
     volumes:
-      - ./docs:/app
-      - /app/node_modules
-    ports:
-      - "3002:3002"
-    environment:
-      - NODE_ENV=development
+      - ./apps/ui/Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
 
 volumes:
   runtime-data:
-  timescaledb-data:
   go-cache:
   pnpm-store:
+  caddy_data:
+  caddy_config:
