--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -1,72 +1,49 @@
 {
-  "name": "@inrush/ui",
-  "version": "0.1.0",
+  "name": "ui",
+  "version": "1.0.0",
+  "description": "",
   "type": "module",
-  "private": true,
   "scripts": {
-    "build": "next build",
-    "check": "next lint && tsc --noEmit",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
-    "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.4.1",
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@tailwindcss/oxide-linux-arm64-musl": "^4.0.7",
-    "@tanstack/react-query": "^5.0.0",
-    "@trpc/client": "^11.0.0-next-beta.264",
-    "@trpc/next": "^11.0.0-next-beta.264",
-    "@trpc/react-query": "^11.0.0-next-beta.264",
-    "@trpc/server": "^11.0.0-next-beta.264",
-    "@types/ws": "^8.5.10",
-    "drizzle-orm": "^0.33.0",
-    "lightningcss-linux-arm64-musl": "^1.29.1",
-    "next": "15.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/postcss": "^4.0.7",
+    "@tanstack/react-query": "^5.66.7",
+    "@tanstack/react-query-devtools": "^5.66.7",
+    "@tanstack/react-router": "^1.106.0",
+    "@tanstack/router-devtools": "^1.106.0",
+    "@tanstack/router-vite-plugin": "^1.106.0",
+    "@tanstack/start": "^1.107.0",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "superjson": "^2.2.1",
-    "ws": "^8.16.0",
-    "zod": "^3.22.4"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.7",
+    "tailwindcss-animate": "^1.0.7",
+    "vinxi": "^0.5.3",
+    "vite": "^6.1.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@types/node": "^20",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.2.2",
-    "@vitest/ui": "^1.2.2",
-    "autoprefixer": "^10.4.17",
-    "drizzle-kit": "^0.24.0",
-    "eslint": "^9.20.1",
-    "eslint-config-next": "15.1.7",
-    "jsdom": "^24.0.0",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.3.3",
-    "vitest": "^1.3.1"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.38.1"
-  },
-  "packageManager": "pnpm@10.4.1",
-  "engines": {
-    "node": ">=23.6.0",
-    "pnpm": ">=10.4.1"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
