--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,32 +24,21 @@ services:
 
   ui:
     build:
-      context: .
-      dockerfile: apps/ui/Dockerfile
+      context: apps/ui
+      dockerfile: Dockerfile
     volumes:
-      - ./apps/ui:/apps/ui
+      - ./apps/ui:/app
       - pnpm-store:/root/.local/share/pnpm/store
     ports:
-      - "8080:3000"
+      - "5173:5173"  # Vite dev server port
     environment:
       - NODE_ENV=development
-      - NEXT_PUBLIC_WS_URL=ws://localhost:3000/ws
+      - VITE_WS_URL=ws://localhost:3000/ws
     depends_on:
       - runtime
-      - caddy
-
-  caddy:
-    image: caddy:2-alpine
-    ports:
-      - "3001:3001"
-    volumes:
-      - ./apps/ui/Caddyfile:/etc/caddy/Caddyfile
-      - caddy_data:/data
-      - caddy_config:/config
+    command: sh -c "pnpm install && pnpm dev --host"
 
 volumes:
   runtime-data:
   go-cache:
   pnpm-store:
-  caddy_data:
-  caddy_config:
