--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -6,21 +6,26 @@
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
-    "start": "vinxi start"
+    "start": "vinxi start",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/postcss": "^4.0.7",
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-query-devtools": "^5.66.7",
-    "@tanstack/react-router": "^1.106.0",
+    "@tanstack/react-router": "^1.111.7",
     "@tanstack/router-devtools": "^1.106.0",
     "@tanstack/router-vite-plugin": "^1.106.0",
     "@tanstack/start": "^1.107.0",
@@ -37,7 +42,8 @@
     "tailwindcss": "^4.0.7",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3",
-    "vite": "^6.1.1"
+    "vite": "^6.1.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
