--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -1,15 +1,27 @@
 {
-    "compilerOptions": {
-      "jsx": "react-jsx",
-      "moduleResolution": "Bundler",
-      "module": "ESNext",
-      "target": "ES2022",
-      "skipLibCheck": true,
-      "strictNullChecks": true,
-      "baseUrl": ".",
-      "paths": {
-        "@/*": ["./app/*"]
-      }
+  "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "jsx": "react-jsx",
+    "module": "ESNext",
+    "skipLibCheck": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./app/*"]
     },
-
-  }
+    "types": ["node"],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "typeRoots": ["./node_modules/@types"]
+  },
+  "include": ["app"]
+}
