--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -24,12 +24,12 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/postcss": "^4.0.9",
-    "@tanstack/react-query": "^5.66.9",
-    "@tanstack/react-query-devtools": "^5.66.9",
-    "@tanstack/react-router": "^1.111.11",
-    "@tanstack/router-devtools": "^1.111.11",
-    "@tanstack/router-vite-plugin": "^1.111.11",
-    "@tanstack/start": "^1.111.11",
+    "@tanstack/react-query": "^5.67.0",
+    "@tanstack/react-query-devtools": "^5.67.0",
+    "@tanstack/react-router": "^1.112.17",
+    "@tanstack/router-devtools": "^1.112.17",
+    "@tanstack/router-vite-plugin": "^1.112.17",
+    "@tanstack/react-start": "^1.112.17",
     "@trpc/client": "11.0.0-rc.808",
     "@trpc/react-query": "11.0.0-rc.808",
     "@trpc/server": "11.0.0-rc.808",
