--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.5.2",
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
@@ -23,13 +24,14 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.67.0",
     "@tanstack/react-query-devtools": "^5.67.0",
     "@tanstack/react-router": "^1.112.17",
+    "@tanstack/react-start": "^1.112.17",
     "@tanstack/router-devtools": "^1.112.17",
     "@tanstack/router-vite-plugin": "^1.112.17",
-    "@tanstack/react-start": "^1.112.17",
     "@trpc/client": "11.0.0-rc.808",
     "@trpc/react-query": "11.0.0-rc.808",
     "@trpc/server": "11.0.0-rc.808",
@@ -37,7 +39,9 @@
     "clsx": "^2.1.1",
     "langium": "~3.3.1",
     "lucide-react": "^0.475.0",
+    "monaco-editor": "^0.45.0",
     "postcss": "^8.5.3",
+    "re-resizable": "^6.9.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
@@ -47,10 +51,7 @@
     "vinxi": "^0.5.3",
     "vite": "^6.2.0",
     "vscode-languageserver": "~9.0.1",
-    "zod": "^3.24.2",
-    "@monaco-editor/react": "^4.6.0",
-    "monaco-editor": "^0.45.0",
-    "re-resizable": "^6.9.11"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@theia/cli": "1.58.3",
