Add context menu.

--- a/apps/ui/app/server/iec61131/language-configuration.json
+++ b/apps/ui/app/server/iec61131/language-configuration.json
@@ -7,20 +7,45 @@
     ["{", "}"],
     ["[", "]"],
     ["(", ")"],
-    ["BEGIN", "END"]
+    ["BEGIN", "END"],
+    ["IF", "END_IF"],
+    ["CASE", "END_CASE"],
+    ["FOR", "END_FOR"],
+    ["WHILE", "END_WHILE"],
+    ["REPEAT", "UNTIL"],
+    ["PROGRAM", "END_PROGRAM"],
+    ["FUNCTION", "END_FUNCTION"],
+    ["FUNCTION_BLOCK", "END_FUNCTION_BLOCK"],
+    ["VAR", "END_VAR"]
   ],
   "autoClosingPairs": [
     { "open": "{", "close": "}" },
     { "open": "[", "close": "]" },
     { "open": "(", "close": ")" },
     { "open": "BEGIN", "close": "END" },
+    { "open": "IF", "close": "END_IF" },
+    { "open": "CASE", "close": "END_CASE" },
+    { "open": "FOR", "close": "END_FOR" },
+    { "open": "WHILE", "close": "END_WHILE" },
+    { "open": "REPEAT", "close": "UNTIL" },
+    { "open": "PROGRAM", "close": "END_PROGRAM" },
+    { "open": "FUNCTION", "close": "END_FUNCTION" },
+    { "open": "FUNCTION_BLOCK", "close": "END_FUNCTION_BLOCK" },
+    { "open": "VAR", "close": "END_VAR" },
     { "open": "'", "close": "'", "notIn": ["string", "comment"] },
+    { "open": "\"", "close": "\"", "notIn": ["string", "comment"] },
     { "open": "(*", "close": "*)", "notIn": ["string"] }
   ],
   "surroundingPairs": [
     ["{", "}"],
     ["[", "]"],
     ["(", ")"],
-    ["'", "'"]
-  ]
+    ["'", "'"],
+    ["\"", "\""]
+  ],
+  "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)",
+  "indentationRules": {
+    "increaseIndentPattern": "(?i)^\\s*(IF|ELSE|ELSIF|CASE|FOR|WHILE|REPEAT|BEGIN|PROGRAM|FUNCTION|FUNCTION_BLOCK|VAR)\\b",
+    "decreaseIndentPattern": "(?i)^\\s*(ELSE|ELSIF|END_IF|END_CASE|END_FOR|END_WHILE|UNTIL|END|END_PROGRAM|END_FUNCTION|END_FUNCTION_BLOCK|END_VAR)\\b"
+  }
 }
