--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -13,9 +13,31 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.5.2",
+  "packageManager": "pnpm@10.6.1",
+  "langium": {
+    "projectName": "IEC61131",
+    "languages": [
+      {
+        "id": "iec-61131",
+        "grammar": "app/server/iec61131/iec-61131.langium",
+        "fileExtensions": [
+          ".st"
+        ],
+        "textMate": {
+          "out": "syntaxes/iec61131.tmLanguage.json"
+        },
+        "monaco": {
+          "monarch": {
+            "out": "app/server/iec61131/monarch-syntax.js"
+          }
+        }
+      }
+    ],
+    "out": "src/generated"
+  },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
@@ -40,6 +62,7 @@
     "langium": "~3.3.1",
     "lucide-react": "^0.475.0",
     "monaco-editor": "^0.45.0",
+    "monaco-languageclient": "^7.3.0",
     "postcss": "^8.5.3",
     "re-resizable": "^6.9.11",
     "react": "^19.0.0",
@@ -51,6 +74,9 @@
     "vinxi": "^0.5.3",
     "vite": "^6.2.0",
     "vscode-languageserver": "~9.0.1",
+    "vscode-languageserver-textdocument": "~1.0.12",
+    "vscode-uri": "~3.0.7",
+    "vscode-ws-jsonrpc": "^3.3.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
