--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.67.0",
@@ -61,11 +62,14 @@
     "lucide-react": "^0.475.0",
     "monaco-editor": "^0.45.0",
     "monaco-languageclient": "^7.3.0",
+    "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
     "re-resizable": "^6.9.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "reflect-metadata": "^0.2.2",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7",
