--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.6",
@@ -41,10 +42,12 @@
     "chevrotain-allstar": "^0.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "esbuild-wasm": "^0.25.2",
     "lucide-react": "^0.475.0",
     "monaco-editor": "^0.45.0",
     "monaco-languageclient": "^7.3.0",
     "next-themes": "^0.4.4",
+    "playground-elements": "^0.18.1",
     "postcss": "^8.5.3",
     "re-resizable": "^6.9.11",
     "react": "^19.0.0",
@@ -56,7 +59,6 @@
     "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3",
-    "vite": "^6.2.0",
     "vscode-languageserver": "~9.0.1",
     "vscode-languageserver-textdocument": "~1.0.12",
     "vscode-uri": "~3.0.7",
@@ -68,9 +70,7 @@
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.1.2",
-    "typescript": "^5.7.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "typescript": "^5.7.3"
   }
 }
